made small adjustments

--- a/data/author.yaml
+++ b/data/author.yaml
@@ -10,3 +10,6 @@ summary:
   - Data Science Student at TUM
   - Software Developer at miviti
   - Passionate about programming and learning new things
+contactInfo:
+  email: "feldsinger@gmx.de"
+
