--- a/data/en/sections/experiences.yaml
+++ b/data/en/sections/experiences.yaml
@@ -34,4 +34,4 @@ experiences:
         end: Sep 2019
         responsibilities:
           - Writing Python Tests for Android Tablets at BMW
-          - App Testing in the vehicle
+          - App Testing in the Vehicle
