added missing tag for the project

--- a/data/en/sections/projects.yaml
+++ b/data/en/sections/projects.yaml
@@ -38,4 +38,4 @@ projects:
     role: Developer
     repo: https://github.com/Zerainen/CloudmersiveToolbox
     summary: Angular & Spring Boot - Web Application that uses the Cloudmersive-API for all kinds of machine learning related tasks
-    tags: ["Angular", "Spring Boot", "Material-UI", "TypeScript", "HTML", "CSS", "Java"]
+    tags: ["Hobby", "Angular", "Spring Boot", "Material-UI", "TypeScript", "HTML", "CSS", "Java"]
