--- a/data/en/sections/about.yaml
+++ b/data/en/sections/about.yaml
@@ -12,7 +12,7 @@ company:
   name: miviti GmbH
   url: "https://www.miviti.de"
 # a summary about you
-summary: "Hello everyone! My name is Alex and this is my personal digital business card. I am currently finishing up my Master's degree in Data Engineering & Analytics at the [TUM](https://www.tum.de/). Simultaneously I am working as a working student at [miviti GmbH](https://www.miviti.de/), where I had to opportunity to work with a variety of different tools and technologies, such as: Android Studio, Angular, Spring Boot, Microsoft Azure, WordPress, etc."
+summary: "Hello everyone! My name is Alex and this is my personal digital business card. I am currently finishing up my Master's degree in Data Engineering & Analytics at the [TUM](https://www.tum.de/). Simultaneously I am working as a working student at [miviti GmbH](https://www.miviti.de/), where I had the opportunity to work with a variety of different tools and technologies, such as: Android Studio, Angular, Spring Boot, Microsoft Azure, WordPress, etc."
 socialLinks:
   - name: Github
     icon: "fab fa-github"
@@ -34,17 +34,33 @@ socialLinks:
 # your resume. this file path should be relative to you "static" directory
 #resume: "files/cv.pdf"
 
-softSkills:
-  - name: Hard Working
-    percentage: 95
-    color: green
-  - name: Problem Solving
-    percentage: 95
-    color: blue
-  - name: Team Work
-    percentage: 95
-    color: yellow
-  - name: Fast Learner
-    percentage: 95
-    color: orange
-
+#softSkills:
+#  - name: C++
+#    percentage: 100
+#    color: green
+#  - name: Kotlin
+#    percentage: 100
+#    color: green
+#  - name: Python
+#    percentage: 100
+#    color: green
+#
+#  - name: Android Studio
+#    percentage: 100
+#    color: orange
+#  - name: Angular
+#    percentage: 100
+#    color: orange
+#  - name: Spring Boot
+#    percentage: 100
+#    color: orange
+#
+#  - name: Linux
+#    percentage: 100
+#    color: yellow
+#  - name: Git
+#    percentage: 100
+#    color: yellow
+#  - name: Microsoft Azure
+#    percentage: 100
+#    color: yellow
