--- a/data/author.yaml
+++ b/data/author.yaml
@@ -7,7 +7,7 @@ greeting: "Hi, I am"
 
 # a summary of what you do
 summary:
-  - Data Science student at TUM
+  - IT Consultant @ Netlight
   - Passionate programmer
 contactInfo:
   email: "feldsinger@gmx.de"
